--- a/HRMS/Views/Master/employee_master.cshtml
+++ b/HRMS/Views/Master/employee_master.cshtml
@@ -252,8 +252,9 @@
                                     <div class="form-group">
                                         <label>Date Of Birth</label><span style="color:crimson">*</span>
 
-                                        @Html.TextBoxFor(p => p.date_of_birth, new { @class = "form-control", @type = "date" })
-
+                                        @*@Html.TextBoxFor(p => p.date_of_birth, new { @class = "form-control", @type = "date" })*@
+                                        @Html.TextBoxFor(p => p.date_of_birth, "{0:dd/MM/yyyy}", new { @class = "form-control", @type = "date" })
+                                      
                                     </div>
 
                                 </div>
@@ -323,6 +324,27 @@
                                                 <option value="Employee">Employee</option>
                                                 <option value="Manager">Manager</option>
 
+                                            </select>
+                                        </div>
+
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-12 col-sm-12 text-start formTitle">
+                                    <div class="form-group">
+                                        <div class="form-group">
+                                            <label>Blood Group</label><span style="color:crimson">*</span>
+
+                                            <select name="blood_group" id="blood_group" class="form-control" required>
+                                                <option value="">Select Blood Group</option>
+
+                                                <option value="A+">A RhD positive (A+)</option>
+                                                <option value="A-">A negative (A-)</option>
+                                                <option value="B+">B positive (B+)</option>
+                                                <option value="B-">B negative (B-)</option>
+                                                <option value="O+">O positive (O+)</option>
+                                                <option value="O-">O negative (O-)</option>
+                                                <option value="AB+">AB positive (AB+)</option>
+                                                <option value="AB-">AB negative (AB-)</option>
                                             </select>
                                         </div>
 
@@ -532,6 +554,7 @@
                 $('#last_edu_ql').val("");
                 $('#user_role').val("");
             $('#employment_role').val("");
+            $('#blood_group').val("");
         }
         function btnsubmitOnclick() {
             if ($('#employee_id').val() == null || $('#employee_id').val() == "") {
@@ -593,12 +616,12 @@
             } else if ($('#department').val() == null || $('#department').val() == "") {
                 alert("Department Cannot be Blank");
                 $('#department').focus();
-
-            } else if ($('#reporting_mg_id').val() == null || $('#reporting_mg_id').val() == "") {
-                alert("Reporting Manager Code Cannot be Blank");
-                $('#reporting_mg_id').focus();
-
             }
+            //} else if ($('#reporting_mg_id').val() == null || $('#reporting_mg_id').val() == "") {
+            //    alert("Reporting Manager Code Cannot be Blank");
+            //    $('#reporting_mg_id').focus();
+
+            //}
             else if ($('#last_edu_ql').val() == null || $('#last_edu_ql').val() == "") {
                 alert("Last Educational Qualification Cannot be Blank");
                 $('#last_edu_ql').focus();
@@ -620,10 +643,14 @@
                 $('#employment_role').focus();
 
             }
+            else if ($('#blood_group').val() == null || $('#blood_group').val() == "") {
+                alert("Blood Group Cannot be Blank");
+                $('#blood_group').focus();
+
+            }
             else {
                     let ModelObject = {
-                        ultyp_code: $('#ultyp_code').val(),
-                        ultyp_libc: $('#ultyp_libc').val(),
+                       
                         employee_id: $('#employee_id').val(),
                         name: $('#name').val(),
                         gender: $('#gender').val(),
@@ -647,6 +674,7 @@
                         branch_id: $('#branch_id').val(),
                         user_role: $('#user_role').val(),
                         employment_role: $('#employment_role').val(),
+                        blood_group: $('#blood_group').val(),
                     };
 
                     $.ajax({
