master address done

--- a/HRMS/Views/Master/Employee_Profile.cshtml
+++ b/HRMS/Views/Master/Employee_Profile.cshtml
@@ -1385,7 +1385,7 @@
                     $.each(data, function (i, sc) {
 
                         $("#country").append(
-                            $('<option></option>').val(sc.countryId).html(sc.countryname));
+                            $('<option></option>').val(sc.countryid).html(sc.countryname));
                     });
                 },
                 error: function (err) {
