--- a/HRMS/Views/Shared/_Layout.cshtml
+++ b/HRMS/Views/Shared/_Layout.cshtml
@@ -60,10 +60,13 @@
                                         </li>
 
                                         <li>
-                                            <a href="/Salary/SalaryStructure" class="nav-link px-0"> <span class=" d-sm-inline">My Salary Structure</span> </a>
+                                            <a href="/Salary/SalaryStructure" class="nav-link px-0"> <span class=" d-sm-inline">MY SALARY STRUCTURES</span> </a>
                                         </li>
                                         <li>
-                                            <a href="/Salary/employeePayslip" class="nav-link px-0"> <span class=" d-sm-inline">Pay Slip</span> </a>
+                                            <a href="/Salary/employeePayslip" class="nav-link px-0"> <span class=" d-sm-inline">PAY SLIP</span> </a>
+                                        </li> 
+                                        <li>
+                                            <a href="/Attendance/Holidays" class="nav-link px-0"> <span class=" d-sm-inline">HOLIDAYS LIST</span> </a>
                                         </li>
                                     </ul>
                                 </li>
@@ -90,6 +93,9 @@
                                             </li>
                                             <li>
                                                 <a href="/Attendance/AddCompOff" class="nav-link px-0"> <span class=" d-sm-inline">ADD COMP OFF</span> </a>
+                                            </li> 
+                                            <li>
+                                                <a href="/Attendance/AddAttendance" class="nav-link px-0"> <span class=" d-sm-inline">ADD ATTENDANCE</span> </a>
                                             </li>
 
 
