--- a/HRMS/Views/Shared/_Layout.cshtml
+++ b/HRMS/Views/Shared/_Layout.cshtml
@@ -97,6 +97,9 @@
                                             <li>
                                                 <a href="/Attendance/AddAttendance" class="nav-link px-0"> <span class=" d-sm-inline">ADD ATTENDANCE</span> </a>
                                             </li>
+                                            <li>
+                                                <a href="/Master/AddAllMasterOfAddress" class="nav-link px-0"> <span class=" d-sm-inline">Add All Address</span> </a>
+                                            </li>
 
 
                                             @if (this.User.IsInRole("SUPERADMIN"))
